--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "tailwindcss": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
